--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1789,19 +1789,14 @@ objects:
         fi
 
         function approve_csrs() {
-          while true; do
-            if [[ ! -f /tmp/install-complete ]]; then
-              oc get csr -ojson | jq -r '.items[] | select(.status == {} ) | .metadata.name' | xargs --no-run-if-empty oc adm certificate approve
-              sleep 15 & wait
-              continue
-            else
-              break
-            fi
+          while [[ ! -f /tmp/exit ]] && [[ ! -f /tmp/setup-success ]]; do
+            oc get csr -ojson | jq -r '.items[] | select(.status == {} ) | .metadata.name' | xargs --no-run-if-empty oc adm certificate approve
+            sleep 15
           done
         }
 
         function update_image_registry() {
-          while true; do
+          while [[ ! -f /tmp/exit ]]; do
             sleep 10;
             oc get configs.imageregistry.operator.openshift.io/cluster > /dev/null && break
           done
