--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -1700,16 +1700,16 @@ objects:
           popd
 
         elif [[ "${CLUSTER_TYPE}" == "vsphere" ]]; then
-          mkdir -p /tmp/tf
+          mkdir -p /tmp/artifacts/terraform
 
           # Copy sample UPI files
-          cp -r /var/lib/openshift-install/upi/${CLUSTER_TYPE}/* /tmp/tf
+          cp -r /var/lib/openshift-install/upi/${CLUSTER_TYPE}/* /tmp/artifacts/terraform
 
           # Create terraform.tfvars
           export MASTER_IGN=$(cat /tmp/artifacts/installer/master.ign)
           export WORKER_IGN=$(cat /tmp/artifacts/installer/worker.ign)
 
-          cat > /tmp/tf/terraform.tfvars <<-EOF
+          cat > /tmp/artifacts/terraform/terraform.tfvars <<-EOF
           machine_cidr = "139.178.87.128/25"
 
           vm_template = "${VM_TEMPLATE}"
@@ -1744,9 +1744,9 @@ objects:
         EOF
 
           # Copy secret tfvars
-          cp ${TFVARS_PATH} /tmp/tf
+          cp ${TFVARS_PATH} /tmp/artifacts/terraform
 
-          cd /tmp/tf
+          cd /tmp/artifacts/terraform
           echo "Creating infra"
           terraform init -input=false -no-color &
           wait "$!"
@@ -1890,13 +1890,13 @@ objects:
               mv /tmp/artifacts/installer/openshift_install_state_updated.json /tmp/artifacts/installer/.openshift_install_state.json
           fi
 
-          if [ -f /tmp/artifacts/installer/terraform.tfstate ]
+          if [ -f /tmp/artifacts/terraform/terraform.tfstate ]
           then
               # we don't have jq, so the python equivalent of
               # jq '.modules[].resources."aws_instance.bootstrap".primary.attributes."public_ip" | select(.)'
               bootstrap_ip=$(python -c \
                   'import sys, json; d=reduce(lambda x,y: dict(x.items() + y.items()), map(lambda x: x["resources"], json.load(sys.stdin)["modules"])); k="aws_instance.bootstrap"; print d[k]["primary"]["attributes"]["public_ip"] if k in d else ""' \
-                  < /tmp/artifacts/installer/terraform.tfstate
+                  < /tmp/artifacts/terraform/terraform.tfstate
               )
 
               if [ -n "${bootstrap_ip}" ]
@@ -2027,7 +2027,7 @@ objects:
             openshift-install --dir ${HOME}/artifacts/installer destroy cluster
             gcloud deployment-manager deployments delete -q ${CLUSTER_NAME}-{worker,control-plane,bootstrap,security,infra,vpc}
           else
-            cd /tmp/shared/tf
+            cd /tmp/artifacts/terraform
             rm -rf .terraform
             terraform init -input=false -no-color
             terraform destroy -auto-approve -no-color
