*: Add openshift/cincinnati-graph-data
We don't actually need Go (the base image would have been sufficient),
but there was no base image in:

  $ oc -n openshift get imagestreamtags | grep '^release:'
  release:golang-1.10               docker-registry.default.svc:5000/openshift/release@sha256:ae244e2fcb9658f3d7dc3c7ac479c025bf49421c4a5f36348dcf86274fafea87  4 hours ago
  release:golang-1.11               docker-registry.default.svc:5000/openshift/release@sha256:6d98facf8290f86529505e0b7bf6f81d9d81132c46b90670745b31cbee22f43b  4 hours ago
  release:golang-1.12               docker-registry.default.svc:5000/openshift/release@sha256:5a6ce04d26ad728814c7ed4153dbd0759b7448e8b3bd0e7583cbbcb0e8d2eedf  4 hours ago
  release:golang-1.8                docker-registry.default.svc:5000/openshift/release@sha256:3c1611893a330d132cf25b31e2eb2de273e57e6b84c6822ffb40df6686448a8a  10 months ago
  release:jdk-8                     docker-registry.default.svc:5000/openshift/release@sha256:b4663ebf8026a204a6994ce7034b8c1580e73b3f11409605c6a0ad422578bad7  6 months ago
  release:nodejs-8                  docker-registry.default.svc:5000/openshift/release@sha256:bc1293553d8d810c4d54bdc69f0f8e13bd39d063b8e147ad92ca34be18453d40  10 months ago
  release:ruby-25                   docker.io/centos/ruby-25-centos7@sha256:9866398704db9207862bdb930b1dba4139dbaf71c6eaa6d084ea036478b28de9                    5 months ago
  release:golang-1.9                docker-registry.default.svc:5000/openshift/release@sha256:4950760fe012d6a1a8dd71fee5554930f9761a81a89ef88621956fa716013561  4 hours ago
  release:nodejs-8-browser-tests    docker-registry.default.svc:5000/openshift/release@sha256:f0befa95b385d90fa4c310c03e61de17cea8c04ec501e5063f3cfe4f7684ef60  10 months ago
  release:tectonic-console-builder  docker-registry.default.svc:5000/openshift/release@sha256:058cd4b159ea359cf18d93aca2f8e1b1b85732ed63789e04a4450fb06cde1814  5 months ago

And the non-Go tags seemed more peripheral.

The approvers data come

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -706,6 +706,7 @@ tide:
     - openshift/certman-operator
     - openshift/ci-chat-bot
     - openshift/cincinnati
+    - openshift/cincinnati-graph-data
     - openshift/ci-ns-ttl-controller
     - openshift/ci-search
     - openshift/ci-secret-mirroring-controller
