--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1904,6 +1904,8 @@ plugins:
   - approve
   openshift/cincinnati:
   - approve
+  openshift/cincinnati-graph-data:
+  - approve
   openshift/client-go:
   - approve
   openshift/cloud-credential-operator:
