prow: hook up coreos/coreos-assembler
This is mostly copy-pasted from the rpm-ostree one.

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -415,6 +415,7 @@ tide:
     codeready-toolchain/toolchain-common: squash
     codeready-toolchain/toolchain-e2e: squash
     codeready-toolchain/toolchain-operator: squash
+    coreos/coreos-assembler: rebase
     coreos/rpm-ostree: rebase
     integr8ly/heimdall: rebase
     openshift-knative/serverless-operator: squash
@@ -1003,6 +1004,7 @@ tide:
     - fabric8-services/toolchain-operator
     - containers/libpod
     - containers/buildah
+    - coreos/coreos-assembler
     - coreos/rpm-ostree
     - ostreedev/ostree
     - kiegroup/kie-cloud-operator
