--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -81,6 +81,10 @@ approve:
   require_self_approval: false
 - lgtm_acts_as_approve: true
   repos:
+  - coreos/coreos-assembler
+  require_self_approval: false
+- lgtm_acts_as_approve: true
+  repos:
   - coreos/rpm-ostree
   require_self_approval: false
 - lgtm_acts_as_approve: true
@@ -996,6 +1000,21 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  coreos/coreos-assembler:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://cherrypick
+    events:
+    - issue_comment
+    - pull_request
+    name: cherrypick
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   coreos/rpm-ostree:
   - endpoint: http://refresh
     events:
@@ -1529,6 +1548,30 @@ plugins:
   - wip
   - yuks
   containers/libpod:
+  - approve
+  - assign
+  - blunderbuss
+  - blockade
+  - cat
+  - dog
+  - heart
+  - golint
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - override
+  - retitle
+  - shrug
+  - sigmention
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - wip
+  - yuks
+  coreos/coreos-assembler:
   - approve
   - assign
   - blunderbuss
