--- a/ci-operator/config/openshift/installer/openshift-installer-master.yaml
+++ b/ci-operator/config/openshift/installer/openshift-installer-master.yaml
@@ -172,6 +172,10 @@ tests:
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_installer_upi:
     cluster_profile: gcp
+- as: e2e-azure-upi
+  commands: TEST_SUITE=openshift/conformance/parallel run-tests
+  openshift_installer_upi:
+    cluster_profile: azure4
 - as: e2e-aws-scaleup-rhel7
   commands: TEST_SUITE=openshift/conformance/parallel run-tests
   openshift_ansible_40:
