--- a/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
+++ b/ci-operator/templates/openshift/installer/cluster-launch-installer-upi-e2e.yaml
@@ -304,6 +304,8 @@ objects:
         value: ${CLUSTER_TYPE}
       - name: AWS_SHARED_CREDENTIALS_FILE
         value: /etc/openshift-installer/.awscred
+      - name: AZURE_AUTH_LOCATION
+        value: /etc/openshift-installer/osServicePrincipal.json
       - name: AWS_REGION
         value: us-east-1
       - name: CLUSTER_NAME
@@ -1190,6 +1192,67 @@ objects:
             rm -f /tmp/artifacts/installer/openshift/99_openshift-cluster-api_worker-machineset-*.yaml
             sed -i "s;mastersSchedulable: true;mastersSchedulable: false;g" /tmp/artifacts/installer/manifests/cluster-scheduler-02-config.yml
 
+        elif [[ "${CLUSTER_TYPE}" == "azure4" ]]; then
+            case $((RANDOM % 8)) in
+            0) AZURE_REGION=centralus;;
+            1) AZURE_REGION=centralus;;
+            2) AZURE_REGION=centralus;;
+            3) AZURE_REGION=centralus;;
+            4) AZURE_REGION=centralus;;
+            5) AZURE_REGION=centralus;;
+            6) AZURE_REGION=eastus2;;
+            7) AZURE_REGION=westus;;
+            *) echo >&2 "invalid Azure region index"; exit 1;;
+            esac
+            echo "Azure region: ${AZURE_REGION}"
+
+            export BASE_DOMAIN_RESOURCE_GROUP="os4-common"	
+            base_domain="${BASE_DOMAIN:-ci.azure.devcluster.openshift.com}"
+            echo "Base domain: ${base_domain}"	
+
+            cat > /tmp/artifacts/installer/install-config.yaml << EOF	
+        apiVersion: v1	
+        baseDomain: ${base_domain}	
+        metadata:	
+          name: ${CLUSTER_NAME}	
+        controlPlane:	
+          name: master	
+          replicas: 3	
+        compute:	
+        - name: worker	
+          replicas: 0	
+        platform:	
+          azure:	
+            baseDomainResourceGroupName: ${BASE_DOMAIN_RESOURCE_GROUP}	
+            region: ${AZURE_REGION}
+        pullSecret: >	
+          ${PULL_SECRET}	
+        sshKey: |	
+          ${SSH_PUB_KEY}	
+        EOF
+            echo "Installing yq"
+            export PATH=${HOME}/.local/bin:${PATH}
+            easy_install --user pip
+            pip install --user yq
+
+            echo "Creating manifests"
+            openshift-install --dir=/tmp/artifacts/installer create manifests
+            
+            pushd /tmp/artifacts/installer
+
+            export INFRA_ID=`yq -r '.status.infrastructureName' manifests/cluster-infrastructure-02-config.yml`
+            export RESOURCE_GROUP=`yq -r '.status.platformStatus.azure.resourceGroupName' manifests/cluster-infrastructure-02-config.yml`
+            echo "Infra ID: ${INFRA_ID}"
+            echo "Resource group: ${RESOURCE_GROUP}"
+
+            echo "Editing manifests"
+            rm -f openshift/99_openshift-cluster-api_master-machines-*.yaml	
+            rm -f openshift/99_openshift-cluster-api_worker-machineset-*.yaml	
+            sed -i "s;mastersSchedulable: true;mastersSchedulable: false;g" manifests/cluster-scheduler-02-config.yml
+            sed -i "/publicZone/,+1d" manifests/cluster-dns-02-config.yml 
+            sed -i "/privateZone/,+1d" manifests/cluster-dns-02-config.yml 
+
+            popd
         else
             echo "Unsupported cluster type '${CLUSTER_TYPE}'"
             exit 1
@@ -1773,6 +1836,102 @@ objects:
           CONTROL_PLANE_2_IP=$(terraform state show 'module.control_plane.external.ip_address[2]' | grep ip_address | awk '{print $3}')
 
           GATHER_BOOTSTRAP_ARGS="${GATHER_BOOTSTRAP_ARGS} --master ${CONTROL_PLANE_0_IP} --master ${CONTROL_PLANE_1_IP} --master ${CONTROL_PLANE_2_IP}"
+
+        elif [[ "${CLUSTER_TYPE}" == "azure4" ]]; then
+          mkdir -p /tmp/azure
+
+          # Copy sample UPI files
+          cp -r /var/lib/openshift-install/upi/azure/* /tmp/azure
+
+          echo "az version:"
+          az version
+          AZURE_AUTH_CLIENT_ID=$(cat $AZURE_AUTH_LOCATION | jq -r .clientId)
+          AZURE_AUTH_CLIENT_SECRET=$(cat $AZURE_AUTH_LOCATION | jq -r .clientSecret)
+          AZURE_AUTH_TENANT_ID=$(cat $AZURE_AUTH_LOCATION | jq -r .tenantId)
+          az login --service-principal -u $AZURE_AUTH_CLIENT_ID -p "$AZURE_AUTH_CLIENT_SECRET" --tenant $AZURE_AUTH_TENANT_ID
+
+          echo "Creating resource group ${RESOURCE_GROUP}"
+          az group create --name $RESOURCE_GROUP --location $AZURE_REGION
+
+          echo "Creating identity"
+          az identity create -g $RESOURCE_GROUP -n ${INFRA_ID}-identity
+
+          export ACCOUNT_NAME=`echo ${CLUSTER_NAME}sa | tr -cd '[:alnum:]'`
+
+          echo "Creating storage account"
+          az storage account create -g $RESOURCE_GROUP --location $AZURE_REGION --name $ACCOUNT_NAME --kind Storage --sku Standard_LRS
+          export ACCOUNT_KEY=`az storage account keys list -g $RESOURCE_GROUP --account-name $ACCOUNT_NAME --query "[0].value" -o tsv`          
+
+          export VHD_URL=`cat /var/lib/openshift-install/rhcos.json | jq -r .azure.url`
+
+          echo "Copying VHD image from ${VHD_URL}"
+          az storage container create --name vhd --account-name $ACCOUNT_NAME
+          az storage blob copy start --account-name $ACCOUNT_NAME --account-key $ACCOUNT_KEY --destination-blob "rhcos.vhd" --destination-container vhd --source-uri "$VHD_URL"
+          status="unknown"
+          while [ "$status" != "success" ]
+          do
+            status=`az storage blob show --container-name vhd --name "rhcos.vhd" --account-name $ACCOUNT_NAME --account-key $ACCOUNT_KEY -o tsv --query properties.copy.status`
+            echo $status
+          done
+
+          echo "Uploading bootstrap.ign"
+          az storage container create --name files --account-name $ACCOUNT_NAME --public-access blob          
+          az storage blob upload --account-name $ACCOUNT_NAME --account-key $ACCOUNT_KEY -c "files" -f "/tmp/artifacts/installer/bootstrap.ign" -n "bootstrap.ign"
+          
+          echo "Creating private DNS zone"
+          az network private-dns zone create -g $RESOURCE_GROUP -n ${CLUSTER_NAME}.${base_domain}
+
+          export PRINCIPAL_ID=`az identity show -g $RESOURCE_GROUP -n ${INFRA_ID}-identity --query principalId --out tsv`
+          echo "Assigning 'Contributor' role to principal ID ${PRINCIPAL_ID}"
+          export RESOURCE_GROUP_ID=`az group show -g $RESOURCE_GROUP --query id --out tsv`
+          az role assignment create --assignee "$PRINCIPAL_ID" --role 'Contributor' --scope "$RESOURCE_GROUP_ID"
+
+          pushd /tmp/azure
+
+          echo "Deploying 01_vnet"
+          az group deployment create -g $RESOURCE_GROUP \
+            --template-file "01_vnet.json" \
+            --parameters baseName="$INFRA_ID"
+        
+          echo "Linking VNet to private DNS zone"
+          az network private-dns link vnet create -g $RESOURCE_GROUP -z ${CLUSTER_NAME}.${base_domain} -n ${INFRA_ID}-network-link -v "${INFRA_ID}-vnet" -e false
+
+          echo "Deploying 02_storage"
+          export VHD_BLOB_URL=`az storage blob url --account-name $ACCOUNT_NAME --account-key $ACCOUNT_KEY -c vhd -n "rhcos.vhd" -o tsv`
+          az group deployment create -g $RESOURCE_GROUP \
+            --template-file "02_storage.json" \
+            --parameters vhdBlobURL="${VHD_BLOB_URL}" \
+            --parameters baseName="$INFRA_ID"
+          
+          echo "Deploying 03_infra"
+          az group deployment create -g $RESOURCE_GROUP \
+            --template-file "03_infra.json" \
+            --parameters privateDNSZoneName="${CLUSTER_NAME}.${base_domain}" \
+            --parameters baseName="$INFRA_ID"
+
+          export PUBLIC_IP=`az network public-ip list -g $RESOURCE_GROUP --query "[?name=='${INFRA_ID}-master-pip'] | [0].ipAddress" -o tsv`
+          echo "Creating 'api' record in public zone for IP ${PUBLIC_IP}"
+          az network dns record-set a add-record -g $BASE_DOMAIN_RESOURCE_GROUP -z ${base_domain} -n api.${CLUSTER_NAME} -a $PUBLIC_IP --ttl 60
+
+          echo "Deploying 04_bootstrap"
+          export BOOTSTRAP_URL=`az storage blob url --account-name $ACCOUNT_NAME --account-key $ACCOUNT_KEY -c "files" -n "bootstrap.ign" -o tsv`
+          export BOOTSTRAP_IGNITION=`jq -rcnM --arg v "2.2.0" --arg url $BOOTSTRAP_URL '{ignition:{version:$v,config:{replace:{source:$url}}}}' | base64 -w0`
+          az group deployment create -g $RESOURCE_GROUP \
+            --template-file "04_bootstrap.json" \
+            --parameters bootstrapIgnition="$BOOTSTRAP_IGNITION" \
+            --parameters sshKeyData="$SSH_PUB_KEY" \
+            --parameters baseName="$INFRA_ID"
+          
+          echo "Deploying 05_masters"
+          export MASTER_IGNITION=`cat /tmp/artifacts/installer/master.ign | base64`
+          az group deployment create -g $RESOURCE_GROUP \
+            --template-file "05_masters.json" \
+            --parameters masterIgnition="$MASTER_IGNITION" \
+            --parameters sshKeyData="$SSH_PUB_KEY" \
+            --parameters privateDNSZoneName="${CLUSTER_NAME}.${base_domain}" \
+            --parameters baseName="$INFRA_ID"
+                    
+          popd
         fi
 
         echo "Waiting for bootstrap to complete"
@@ -1795,6 +1954,39 @@ objects:
         elif [[ "${CLUSTER_TYPE}" == "vsphere" ]]; then
           terraform apply -auto-approve -var 'bootstrap_complete=true' -no-color &
           wait "$!"
+        elif [[ "${CLUSTER_TYPE}" == "azure4" ]]; then
+          az network nsg rule delete -g $RESOURCE_GROUP --nsg-name ${INFRA_ID}-controlplane-nsg --name bootstrap_ssh_in
+          az vm stop -g $RESOURCE_GROUP --name ${INFRA_ID}-bootstrap
+          az vm deallocate -g $RESOURCE_GROUP --name ${INFRA_ID}-bootstrap
+          az vm delete -g $RESOURCE_GROUP --name ${INFRA_ID}-bootstrap --yes
+          az disk delete -g $RESOURCE_GROUP --name ${INFRA_ID}-bootstrap_OSDisk --no-wait --yes
+          az network nic delete -g $RESOURCE_GROUP --name ${INFRA_ID}-bootstrap-nic --no-wait
+          az storage blob delete --account-key $ACCOUNT_KEY --account-name $ACCOUNT_NAME --container-name files --name bootstrap.ign
+          az network public-ip delete -g $RESOURCE_GROUP --name ${INFRA_ID}-bootstrap-ssh-pip
+
+          export KUBECONFIG=/tmp/artifacts/installer/auth/kubeconfig
+
+          public_ip_router="<pending>"
+          while [[ $public_ip_router =~ "pending" ]]
+          do
+            public_ip_router=`oc -n openshift-ingress get service router-default --no-headers | awk '{print $4}'`
+            echo $public_ip_router
+          done
+          
+          az network dns record-set a add-record -g $BASE_DOMAIN_RESOURCE_GROUP -z ${base_domain} -n *.apps.${CLUSTER_NAME} -a $public_ip_router --ttl 300
+          
+          az network private-dns record-set a create -g $RESOURCE_GROUP -z ${CLUSTER_NAME}.${base_domain} -n *.apps --ttl 300
+          az network private-dns record-set a add-record -g $RESOURCE_GROUP -z ${CLUSTER_NAME}.${base_domain} -n *.apps -a $public_ip_router
+
+          echo "Deploying 06_workers"
+          pushd /tmp/azure
+          export WORKER_IGNITION=`cat /tmp/artifacts/installer/worker.ign | base64`
+          az group deployment create -g $RESOURCE_GROUP \
+            --template-file "06_workers.json" \
+            --parameters workerIgnition="$WORKER_IGNITION" \
+            --parameters sshKeyData="$SSH_PUB_KEY" \
+            --parameters baseName="$INFRA_ID"
+          popd
         fi
 
         function approve_csrs() {
@@ -1851,6 +2043,8 @@ objects:
         value: /tmp/artifacts/installer/auth/kubeconfig
       - name: AWS_SHARED_CREDENTIALS_FILE
         value: /etc/openshift-installer/.awscred
+      - name: AZURE_AUTH_LOCATION
+        value: /etc/openshift-installer/osServicePrincipal.json
       - name: TFVARS_PATH
         value: /etc/openshift-installer/secret.auto.tfvars
       - name: AWS_REGION
@@ -2032,6 +2226,12 @@ objects:
             export CLOUDSDK_CONFIG=${HOME}/shared/gcloudconfig
             openshift-install --dir ${HOME}/artifacts/installer destroy cluster
             gcloud deployment-manager deployments delete -q ${CLUSTER_NAME}-{worker,control-plane,bootstrap,security,infra,vpc}
+          elif [[ "${CLUSTER_TYPE}" == "azure4" ]]; then
+            openshift-install --dir=/tmp/artifacts/installer destroy cluster
+            if [[ -f /tmp/artifacts/installer/metadata.json ]]; then
+              export INFRA_ID=`cat /tmp/artifacts/installer/metadata.json | jq -r '.infraID'`
+              az group delete --name ${INFRA_ID}-rg --yes
+            fi
           else
             cd /tmp/shared/tf
             rm -rf .terraform
