--- a/core-services/release-controller/_releases/release-ocp-4.3-ci.json
+++ b/core-services/release-controller/_releases/release-ocp-4.3-ci.json
@@ -29,7 +29,7 @@
           "ironic",
           "ironic-inspector",
           "ironic-ipa-downloader",
-          "ironic-rhcos-downloader",
+          "ironic-machine-os-downloader",
           "ironic-static-ip-manager",
           "kuryr-cni",
           "kuryr-controller"
