--- a/ci-operator/config/openshift/ironic-rhcos-downloader/openshift-ironic-rhcos-downloader-release-4.4.yaml
+++ b/ci-operator/config/openshift/ironic-rhcos-downloader/openshift-ironic-rhcos-downloader-release-4.4.yaml
@@ -11,7 +11,7 @@ build_root:
 images:
 - dockerfile_path: Dockerfile.ocp
   from: base
-  to: ironic-rhcos-downloader
+  to: ironic-machine-os-downloader
 promotion:
   disabled: true
   name: "4.4"
