--- a/ci-operator/config/openshift/insights-operator/openshift-insights-operator-release-4.4.yaml
+++ b/ci-operator/config/openshift/insights-operator/openshift-insights-operator-release-4.4.yaml
@@ -27,7 +27,7 @@ tag_specification:
   namespace: ocp
 tests:
 - as: unit
-  commands: go test ./...
+  commands: make test
   container:
     from: src
 - as: e2e-aws
@@ -39,3 +39,7 @@ tests:
   openshift_installer:
     cluster_profile: aws
     upgrade: true
+- as: insights-operator-e2e-tests
+  commands: make test-e2e
+  openshift_installer_src:
+    cluster_profile: aws
