--- a/ci-operator/config/openshift/insights-operator/openshift-insights-operator-release-4.3.yaml
+++ b/ci-operator/config/openshift/insights-operator/openshift-insights-operator-release-4.3.yaml
@@ -26,7 +26,7 @@ tag_specification:
   namespace: ocp
 tests:
 - as: unit
-  commands: make test
+  commands: make test-unit
   container:
     from: src
 - as: e2e-aws
