--- a/ci-operator/config/openshift/insights-operator/openshift-insights-operator-release-4.4.yaml
+++ b/ci-operator/config/openshift/insights-operator/openshift-insights-operator-release-4.4.yaml
@@ -27,7 +27,7 @@ tag_specification:
   namespace: ocp
 tests:
 - as: unit
-  commands: make test
+  commands: make test-unit
   container:
     from: src
 - as: e2e-aws
