Configuration for kubevirt openshift-ci onboarding
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -1672,6 +1672,8 @@ plugins:
   - trigger
   kubevirt/hyperconverged-cluster-operator:
   - trigger
+  kubevirt/kubevirt:
+  - trigger
   monstorak/monstorak-operator:
   - assign
   - blunderbuss
