Add flags, use gimme to set go version
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -20,6 +20,12 @@ tag_specification:
 tests:
 - as: "kubevirt-e2e-test"
   commands: |
+    set -e
+    set -o pipefail
+
+    export GIMME_GO_VERSION=1.12.8
+    source /etc/profile.d/gimme.sh
+
     export KUBEVIRT_PROVIDER=external
     ./hack/generate.sh
     ./hack/cluster-build.sh
