--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -40,6 +40,12 @@ presubmits:
           value: kubevirt-e2e-test
         - name: TEST_COMMAND
           value: |
+            set -e
+            set -o pipefail
+
+            export GIMME_GO_VERSION=1.12.8
+            source /etc/profile.d/gimme.sh
+
             export KUBEVIRT_PROVIDER=external
             ./hack/generate.sh
             ./hack/cluster-build.sh
