Added gopath and gobin env vars
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -27,11 +27,11 @@ tests:
 
     # setup go env
     export GIMME_GO_VERSION=1.12.8
+    export GOPATH="/go"
+    export GOBIN="/usr/bin"
     source /etc/profile.d/gimme.sh
 
     # make generate
-    ./hack/dep-update.sh
-    ./hack/dep-prune.sh
     ./hack/generate.sh
 
     # make cluster-sync
