--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -47,11 +47,11 @@ presubmits:
 
             # setup go env
             export GIMME_GO_VERSION=1.12.8
+            export GOPATH="/go"
+            export GOBIN="/usr/bin"
             source /etc/profile.d/gimme.sh
 
             # make generate
-            ./hack/dep-update.sh
-            ./hack/dep-prune.sh
             ./hack/generate.sh
 
             # make cluster-sync
