Revert "Lock version of image for config resolver"
This reverts commit 3539c71ec30f5e677913c18e2596f15cda7cc72d.

Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
+++ b/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
@@ -62,6 +62,8 @@ items:
   metadata:
     namespace: ci
     name: ci-operator-configresolver
+    annotations:
+      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"ci-operator-configresolver:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"ci-operator-configresolver\")].image"}]'
   spec:
     replicas: 3
     strategy:
