Disable tree structure validation
Signed-off-by: Steve Kuznetsov <skuznets@redhat.com>

--- a/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
+++ b/core-services/ci-operator-configresolver/ci-operator-configresolver.yaml
@@ -89,6 +89,7 @@ items:
           args:
           - -config=/etc/configs
           - -registry=/etc/registry
+          - -flat-registry
           - -log-level=debug
           - -cycle=2m
           livenessProbe:
