Add canonical_go_repository setting to config
Signed-off-by: Daniel Hiller <daniel.hiller.1972@gmail.com>

--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -7,6 +7,7 @@ build_root:
   project_image:
     context_dir: hack/kubevirt-builder
     dockerfile_path: Dockerfile
+canonical_go_repository: kubevirt.io/kubevirt
 resources:
   '*':
     limits:
