--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -8,6 +8,21 @@ build_root:
     context_dir: hack/kubevirt-builder
     dockerfile_path: Dockerfile
 canonical_go_repository: kubevirt.io/kubevirt
+binary_build_commands: |
+
+  export GIMME_GO_VERSION=1.12.8
+  export GOPATH="/go"
+  export GOBIN="/usr/bin"
+  source /etc/profile.d/gimme.sh
+  go env
+
+  export DOCKER_PREFIX='https://api.ci.openshift.org/kubevirt/kubevirt'
+  export DOCKER_TAG='os-ci-devel'
+  export KUBEVIRT_PROVIDER=external
+
+  # build and push images
+  bash -x ./hack/bazel-push-images.sh
+
 resources:
   '*':
     limits:
@@ -21,25 +36,24 @@ tag_specification:
 tests:
 - as: "kubevirt-e2e-test"
   commands: |
-    # we hack the build process as we don't have docker around here
-    # normally we'd only need to use automate/test.sh
 
-    # setup go env
     export GIMME_GO_VERSION=1.12.8
     export GOPATH="/go"
     export GOBIN="/usr/bin"
     source /etc/profile.d/gimme.sh
     go env
 
-    # make generate
-    bash -x ./hack/generate.sh
-
-    # make cluster-sync
+    export DOCKER_PREFIX='https://api.ci.openshift.org/kubevirt/kubevirt'
+    export DOCKER_TAG='os-ci-devel'
     export KUBEVIRT_PROVIDER=external
-    bash -x ./hack/cluster-build.sh
+
+    # create manifests
+    bash -x ./hack/build-manifests.sh
+
+    # deploy
     bash -x ./hack/cluster-deploy.sh
 
-    # make functest
+    # functest
     bash -x ./hack/functests.sh
   openshift_installer_src:
     cluster_profile: gcp
