--- a/core-services/release-controller/_releases/release-origin-4.3.json
+++ b/core-services/release-controller/_releases/release-origin-4.3.json
@@ -8,9 +8,5 @@
   "publish":{
     "tag":{"tagRef":{"name":"4.3"}}
   },
-  "verify":{
-    "aws":{
-      "prowJob":{"name":"release-openshift-origin-installer-e2e-aws-4.3"}
-    }
-  }
+  "verify":{}
 }
