--- a/ci-operator/jobs/ibm/deploy/ibm-deploy-master.yaml
+++ b/ci-operator/jobs/ibm/deploy/ibm-deploy-master.yaml
@@ -69,7 +69,7 @@ presubmits:
                 valueFrom:
                   fieldRef:
                     fieldPath: metadata.namespace
-            image: registry.ng.bluemix.net/armada/openshift4-gate:5937ac6b4fa5a5cd260062ad66e55505fa8ba19e
+            image: registry.ng.bluemix.net/armada/openshift4-gate:master
             imagePullPolicy: Always
             name: ""
             resources:
