--- a/ci-operator/jobs/ibm/deploy/ibm-deploy-master.yaml
+++ b/ci-operator/jobs/ibm/deploy/ibm-deploy-master.yaml
@@ -13,6 +13,8 @@ presubmits:
         pj-rehearse.openshift.io/can-be-rehearsed: "true"
       name: deploy-ibm-cloud-cluster
       spec:
+        imagePullSecrets:
+        - name: registry-default-secret
         containers:
           - args:
             command:
