fix namespace var name

--- a/ci-operator/jobs/ibm/deploy/ibm-deploy-master.yaml
+++ b/ci-operator/jobs/ibm/deploy/ibm-deploy-master.yaml
@@ -67,7 +67,7 @@ presubmits:
                   secretKeyRef:
                     key: cos_secret_access_key
                     name: ibm-gate-test-secrets
-              - name: MY_POD_NAMESPACE
+              - name: OPENSHIFT_BUILD_NAMESPACE
                 valueFrom:
                   fieldRef:
                     fieldPath: metadata.namespace
