add group-auto-updater image in ci-tools ci-op config

--- a/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
+++ b/ci-operator/config/openshift/ci-tools/openshift-ci-tools-master.yaml
@@ -195,6 +195,14 @@ images:
       - destination_dir: .
         source_path: /go/bin/repo-init
   to: repo-init
+- context_dir: images/group-auto-updater
+  from: os
+  inputs:
+    bin:
+      paths:
+      - destination_dir: .
+        source_path: /go/bin/group-auto-updater
+  to: group-auto-updater
 promotion:
   namespace: ci
   tag: latest
