Add config for openshift/file-integrity-operator

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -621,6 +621,7 @@ tide:
     - operator-framework/operator-metering
     - operator-framework/operator-registry
     - operator-framework/presto
+    - openshift/file-integrity-operator
   - includedBranches:
     - release-4.0
     - release-4.1
@@ -812,6 +813,7 @@ tide:
     - operator-framework/operator-metering
     - operator-framework/operator-registry
     - operator-framework/presto
+    - openshift/file-integrity-operator
   - includedBranches:
     - release-4.3
     labels:
@@ -1058,6 +1060,7 @@ tide:
     - operator-framework/operator-metering
     - operator-framework/operator-registry
     - operator-framework/presto
+    - openshift/file-integrity-operator
   - labels:
     - lgtm
     - approved
