--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -81,6 +81,9 @@ approve:
   repos:
   - ostreedev/ostree
   require_self_approval: false
+- repos:
+  - openshift/file-integrity-operator
+  require_self_approval: false
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -1058,6 +1061,9 @@ lgtm:
   - openshift/ci-tools
   review_acts_as_lgtm: true
   trusted_team_for_sticky_lgtm: openshift-team-developer-productivity-test-platform
+- repos:
+  - openshift/file-integrity-operator
+  review_acts_as_lgtm: true
 override:
   allow_top_level_owners: true
 owners:
@@ -1719,6 +1725,8 @@ plugins:
   openshift/external-storage:
   - approve
   openshift/federation-v2-operator:
+  - approve
+  openshift/file-integrity-operator:
   - approve
   openshift/grafana:
   - approve
