--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.2-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.2-presubmits.yaml
@@ -308,6 +308,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.2"
         - name: CLUSTER_TYPE
           value: aws
         - name: CONFIG_SPEC
@@ -702,6 +704,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.2"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
