--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.4-presubmits.yaml
@@ -308,6 +308,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.4"
         - name: CLUSTER_TYPE
           value: aws
         - name: CONFIG_SPEC
@@ -581,6 +583,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.4"
         - name: CLUSTER_TYPE
           value: gcp
         - name: CONFIG_SPEC
@@ -654,6 +658,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.4"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
