--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.5-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.5-presubmits.yaml
@@ -304,6 +304,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.5"
         - name: CLUSTER_TYPE
           value: aws
         - name: CONFIG_SPEC
@@ -575,6 +577,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.5"
         - name: CLUSTER_TYPE
           value: gcp
         - name: CONFIG_SPEC
@@ -647,6 +651,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.5"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
