--- a/ci-operator/jobs/openshift/machine-config-operator/openshift-machine-config-operator-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/machine-config-operator/openshift-machine-config-operator-release-4.3-presubmits.yaml
@@ -383,6 +383,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.3"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
