--- a/ci-operator/jobs/openshift/machine-config-operator/openshift-machine-config-operator-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/machine-config-operator/openshift-machine-config-operator-release-4.4-presubmits.yaml
@@ -382,6 +382,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.4"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
