--- a/ci-operator/jobs/openshift/machine-config-operator/openshift-machine-config-operator-release-4.5-presubmits.yaml
+++ b/ci-operator/jobs/openshift/machine-config-operator/openshift-machine-config-operator-release-4.5-presubmits.yaml
@@ -378,6 +378,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.5"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
