--- a/ci-operator/jobs/openshift/origin/openshift-origin-release-4.1-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-release-4.1-presubmits.yaml
@@ -561,6 +561,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.1"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
@@ -730,6 +732,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.1"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
