--- a/ci-operator/jobs/openshift/origin/openshift-origin-release-4.2-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-release-4.2-presubmits.yaml
@@ -871,6 +871,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.2"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
@@ -1040,6 +1042,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.2"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
