--- a/ci-operator/jobs/openshift/origin/openshift-origin-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-release-4.3-presubmits.yaml
@@ -873,6 +873,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.3"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
@@ -1042,6 +1044,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.3"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
