--- a/ci-operator/jobs/openshift/origin/openshift-origin-release-4.4-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-release-4.4-presubmits.yaml
@@ -875,6 +875,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.4"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
@@ -995,6 +997,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.4"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
