--- a/ci-operator/jobs/openshift/installer/openshift-installer-release-4.3-presubmits.yaml
+++ b/ci-operator/jobs/openshift/installer/openshift-installer-release-4.3-presubmits.yaml
@@ -308,6 +308,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.3"
         - name: CLUSTER_TYPE
           value: aws
         - name: CONFIG_SPEC
@@ -579,6 +581,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.3"
         - name: CLUSTER_TYPE
           value: gcp
         - name: CONFIG_SPEC
@@ -652,6 +656,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.3"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
