--- a/ci-operator/jobs/openshift/origin/openshift-origin-release-4.5-presubmits.yaml
+++ b/ci-operator/jobs/openshift/origin/openshift-origin-release-4.5-presubmits.yaml
@@ -868,6 +868,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.5"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
@@ -988,6 +990,8 @@ presubmits:
         command:
         - ci-operator
         env:
+        - name: BRANCH
+          value: "4.5"
         - name: CLUSTER_TYPE
           value: vsphere
         - name: CONFIG_SPEC
