Run serverless upgrade tests separately

--- a/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3__4.2.yaml
+++ b/ci-operator/config/openshift-knative/serverless-operator/openshift-knative-serverless-operator-release-1.3__4.2.yaml
@@ -17,6 +17,10 @@ tests:
   commands: "make test-e2e"
   openshift_installer_src:
     cluster_profile: aws
+- as: upgrade-tests-aws-ocp-42
+  commands: "make test-upgrade"
+  openshift_installer_src:
+    cluster_profile: aws
 resources:
   '*':
     limits:
