adding ci config for integreatly/heimdall

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -420,6 +420,7 @@ tide:
     openshift/template-service-broker-operator: squash
     redhat-developer/openshift-jenkins-operator: rebase
     redhat-developer/service-binding-operator: squash
+    integr8ly/heimdall: rebase
   pr_status_base_url: https://prow.svc.ci.openshift.org/pr
   queries:
   - includedBranches:
@@ -1226,6 +1227,7 @@ tide:
     - integr8ly/integreatly-operator
     - integr8ly/cloud-resource-operator
     - integr8ly/installation
+    - integr8ly/heimdall
   - labels:
     - lgtm
     - approved
