--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -69,6 +69,7 @@ approve:
   - integr8ly/integreatly-operator
   - integr8ly/cloud-resource-operator
   - integr8ly/installation
+  - integr8ly/heimdall
   require_self_approval: true
 - lgtm_acts_as_approve: true
   repos:
@@ -902,6 +903,21 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  integr8ly/heimdall:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://cherrypick
+    events:
+    - issue_comment
+    - pull_request
+    name: cherrypick
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   integr8ly/installation:
   - endpoint: http://refresh
     events:
@@ -1397,6 +1413,28 @@ plugins:
   heketi/heketi:
   - trigger
   integr8ly/cloud-resource-operator:
+  - assign
+  - blockade
+  - cat
+  - dog
+  - heart
+  - golint
+  - help
+  - hold
+  - label
+  - lgtm
+  - lifecycle
+  - override
+  - shrug
+  - sigmention
+  - size
+  - skip
+  - trigger
+  - verify-owners
+  - wip
+  - yuks
+  - approve
+  integr8ly/heimdall:
   - assign
   - blockade
   - cat
