--- a/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
+++ b/ci-operator/config/kubevirt/kubevirt/kubevirt-kubevirt-master.yaml
@@ -39,6 +39,8 @@ tests:
     which kubectl
     which oc
 
+    oc get nodes
+
     export DOCKER_PREFIX='dhiller'
     export DOCKER_TAG="latest"
     export KUBEVIRT_PROVIDER=external
@@ -55,6 +57,9 @@ tests:
 
     echo "deploying"
     bash -x ./hack/cluster-deploy.sh
+
+    echo "checking pods for kubevirt"
+    oc get pods -n kubevirt
 
     echo "testing"
     go get -u github.com/onsi/ginkgo/ginkgo
