--- a/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
+++ b/ci-operator/jobs/kubevirt/kubevirt/kubevirt-kubevirt-master-presubmits.yaml
@@ -60,6 +60,8 @@ presubmits:
             which kubectl
             which oc
 
+            oc get nodes
+
             export DOCKER_PREFIX='dhiller'
             export DOCKER_TAG="latest"
             export KUBEVIRT_PROVIDER=external
@@ -76,6 +78,9 @@ presubmits:
 
             echo "deploying"
             bash -x ./hack/cluster-deploy.sh
+
+            echo "checking pods for kubevirt"
+            oc get pods -n kubevirt
 
             echo "testing"
             go get -u github.com/onsi/ginkgo/ginkgo
