Add auto-merge and some addtional plugins for openshift-kni/baremetal-deploy
Signed-off-by: Artyom Lukianov <alukiano@redhat.com>

--- a/core-services/prow/02_config/_config.yaml
+++ b/core-services/prow/02_config/_config.yaml
@@ -402,6 +402,7 @@ tide:
     codeready-toolchain/toolchain-operator: squash
     coreos/rpm-ostree: rebase
     openshift-knative/serverless-operator: squash
+    openshift-kni/baremetal-deploy: squash
     openshift/ansible-service-broker: squash
     openshift/cluster-api: rebase
     openshift/cluster-api-provider-azure: rebase
@@ -1222,6 +1223,16 @@ tide:
     - integr8ly/integreatly-operator
     - integr8ly/cloud-resource-operator
     - integr8ly/installation
+  - labels:
+    - lgtm
+    - approved
+    missingLabels:
+    - needs-rebase
+    - do-not-merge/hold
+    - do-not-merge/work-in-progress
+    - do-not-merge/invalid-owners-file
+    repos:
+    - openshift-kni/baremetal-deploy
   - labels:
     - lgtm
     - approved
