--- a/core-services/prow/02_config/_plugins.yaml
+++ b/core-services/prow/02_config/_plugins.yaml
@@ -85,6 +85,10 @@ approve:
 - repos:
   - openshift/file-integrity-operator
   require_self_approval: false
+- ignore_review_state: true
+  repos:
+  - openshift-kni/baremetal-deploy
+  require_self_approval: true
 blunderbuss:
   max_request_count: 2
   request_count: 2
@@ -956,6 +960,16 @@ external_plugins:
     - issue_comment
     - pull_request
     name: needs-rebase
+  openshift-kni/baremetal-deploy:
+  - endpoint: http://refresh
+    events:
+    - issue_comment
+    name: refresh
+  - endpoint: http://needs-rebase
+    events:
+    - issue_comment
+    - pull_request
+    name: needs-rebase
   openshift-priv:
   - endpoint: http://refresh
     events:
@@ -1545,6 +1559,18 @@ plugins:
   - wip
   - yuks
   openshift-kni/baremetal-deploy:
+  - approve
+  - size
+  - label
+  - hold
+  - assign
+  - blunderbuss
+  - lifecycle
+  - owners-label
+  - verify-owners
+  - skip
+  - override
+  - wip
   - lgtm
   - shrug
   - trigger
